# meu3014

./: .gitmodules  CMakeLists.txt  main.cpp
app/: CMakeLists.txt  encoder_dev.cpp  encoder_test copy.cpp  encoder_test.cpp  frequency_sweep.cpp  include_test.cpp  motor_dev.cpp  motor_sine_wave_dev.cpp  motor_test.cpp  periodic_test.cpp  record_and_play_pid.cpp  record_and_play_smc.cpp  record_dev.cpp  voltage_velocity.cpp
include/: common.hpp  encoder.hpp  hal.hpp
lib/: CMakeLIsts.txt
src/: encoder.cpp  hal.cpp
